--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.elijah-piper</groupId>
+    <groupId>com.elijahpiper</groupId>
     <artifactId>Humans-vs-Goblins</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>true</version>
+            <version>18.0.1</version>
         </dependency>
     </dependencies>
     <build>
